// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select component renders component in search mode and false for multiple choice: Component has correct render in search mode and mutiple choice equals false 1`] = `
<Select
  aria-describedby={null}
  aria-label={null}
  aria-labelledby={null}
  autoFocus={false}
  backspaceRemoves={true}
  clearable={true}
  closeOnSelect={true}
  deleteRemoves={true}
  disabled={false}
  error={false}
  escapeClearsValue={true}
  filterOptions={[Function]}
  filterOutSelected={true}
  getOptionLabel={null}
  getValueLabel={null}
  isLoading={false}
  labelKey="label"
  maxDropdownHeight="900px"
  multi={false}
  multiple={false}
  noResultsMsg="No results found"
  onBlur={[MockFunction]}
  onBlurResetsInput={true}
  onChange={[MockFunction]}
  onClose={null}
  onCloseResetsInput={true}
  onFocus={[MockFunction]}
  onInputChange={[MockFunction]}
  onOpen={null}
  onSelectResetsInput={true}
  openOnClick={true}
  options={
    Array [
      Object {
        "id": "id1",
        "label": "label1",
      },
      Object {
        "id": "id2",
        "label": "label2",
      },
      Object {
        "id": "id3",
        "label": "bel3",
      },
    ]
  }
  overrides={Object {}}
  placeholder="Select..."
  required={false}
  searchable={true}
  size="default"
  type="search"
  value={Array []}
  valueKey="id"
>
  <MockStyledComponent
    $disabled={false}
    $error={false}
    $isFocused={false}
    $isLoading={false}
    $isOpen={false}
    $isPseudoFocused={false}
    $multi={false}
    $ref={[Function]}
    $required={false}
    $searchable={true}
    $size="default"
    $type="search"
  >
    <div
      styled-component="true"
    >
      <MockStyledComponent
        $disabled={false}
        $error={false}
        $isFocused={false}
        $isLoading={false}
        $isOpen={false}
        $isPseudoFocused={false}
        $multi={false}
        $required={false}
        $searchable={true}
        $size="default"
        $type="search"
        onClick={[Function]}
        onKeyDown={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
      >
        <div
          onClick={[Function]}
          onKeyDown={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          styled-component="true"
        >
          <Search
            $disabled={false}
            $error={false}
            $isFocused={false}
            $isLoading={false}
            $isOpen={false}
            $isPseudoFocused={false}
            $multi={false}
            $required={false}
            $searchable={true}
            $size="default"
            $type="search"
            onClick={[Function]}
            overrides={
              Object {
                "Svg": [Function],
              }
            }
            size={16}
            title="search"
          >
            <Icon
              $disabled={false}
              $error={false}
              $isFocused={false}
              $isLoading={false}
              $isOpen={false}
              $isPseudoFocused={false}
              $multi={false}
              $required={false}
              $searchable={true}
              $size="default"
              $type="search"
              onClick={[Function]}
              overrides={
                Object {
                  "Svg": [Function],
                }
              }
              size={16}
              title="search"
              viewBox="0 0 24 24"
            >
              <MockStyledComponent
                $disabled={false}
                $error={false}
                $isFocused={false}
                $isLoading={false}
                $isOpen={false}
                $isPseudoFocused={false}
                $multi={false}
                $required={false}
                $searchable={true}
                $size="default"
                $type="search"
                onClick={[Function]}
                viewBox="0 0 24 24"
              >
                <svg
                  onClick={[Function]}
                  styled-component="true"
                  viewBox="0 0 24 24"
                >
                  <title>
                    search
                  </title>
                  <g
                    transform="matrix( 1 0 0 1 1 0.899993896484375 )"
                  >
                    <path
                      clipRule="nonzero"
                      d="M 21.60009765625 19.500030517578125 L 17.2001953125 15.100006103515625 C 18.300195693969727 13.500005722045898 19 11.600030899047852 19 9.500030517578125 C 19 4.300030708312988 14.699999809265137 0 9.5 0 C 4.300000190734863 0 0 4.300030708312988 0 9.500030517578125 C 0 14.700030326843262 4.300000190734863 19.000030517578125 9.5 19.000030517578125 C 11.600000381469727 19.000030517578125 13.500097274780273 18.29998207092285 15.10009765625 17.199981689453125 L 19.5 21.600006103515625 L 21.60009765625 19.500030517578125 Z M 3 9.600006103515625 C 3 6.000006198883057 5.900000095367432 3.100006103515625 9.5 3.100006103515625 C 13.100000381469727 3.100006103515625 16 6.000006198883057 16 9.600006103515625 C 16 13.200006484985352 13.100000381469727 16.100006103515625 9.5 16.100006103515625 C 5.900000095367432 16.100006103515625 3 13.200006484985352 3 9.600006103515625 Z"
                      fill="currentColor"
                      fillRule="nonzero"
                    />
                  </g>
                </svg>
              </MockStyledComponent>
            </Icon>
          </Search>
          <MockStyledComponent
            $disabled={false}
            $error={false}
            $isFocused={false}
            $isLoading={false}
            $isOpen={false}
            $isPseudoFocused={false}
            $multi={false}
            $required={false}
            $searchable={true}
            $size="default"
            $type="search"
            role="list"
          >
            <span
              role="list"
              styled-component="true"
            >
              <MockStyledComponent
                $disabled={false}
                $error={false}
                $isFocused={false}
                $isLoading={false}
                $isOpen={false}
                $isPseudoFocused={false}
                $multi={false}
                $required={false}
                $searchable={true}
                $size="default"
                $type="search"
              >
                <div
                  styled-component="true"
                >
                  Select...
                </div>
              </MockStyledComponent>
              <MockStyledComponent
                $disabled={false}
                $error={false}
                $isFocused={false}
                $isLoading={false}
                $isOpen={false}
                $isPseudoFocused={false}
                $multi={false}
                $required={false}
                $searchable={true}
                $size="default"
                $type="search"
              >
                <div
                  styled-component="true"
                >
                  <AutosizeInput
                    $disabled={false}
                    $error={false}
                    $isFocused={false}
                    $isLoading={false}
                    $isOpen={false}
                    $isPseudoFocused={false}
                    $multi={false}
                    $required={false}
                    $searchable={true}
                    $size="default"
                    $type="search"
                    aria-autocomplete="list"
                    aria-describedby={null}
                    aria-disabled={null}
                    aria-expanded={false}
                    aria-haspopup={false}
                    aria-label={null}
                    aria-labelledby={null}
                    disabled={null}
                    inputRef={[Function]}
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    overrides={
                      Object {
                        "Input": undefined,
                      }
                    }
                    required={false}
                    role="combobox"
                    value=""
                  >
                    <MockStyledComponent
                      $disabled={false}
                      $error={false}
                      $isFocused={false}
                      $isLoading={false}
                      $isOpen={false}
                      $isPseudoFocused={false}
                      $multi={false}
                      $ref={[Function]}
                      $required={false}
                      $searchable={true}
                      $size="default"
                      $type="search"
                      $width="5px"
                      aria-autocomplete="list"
                      aria-describedby={null}
                      aria-disabled={null}
                      aria-expanded={false}
                      aria-haspopup={false}
                      aria-label={null}
                      aria-labelledby={null}
                      disabled={null}
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      required={false}
                      role="combobox"
                      value=""
                    >
                      <input
                        aria-autocomplete="list"
                        aria-describedby={null}
                        aria-disabled={null}
                        aria-expanded={false}
                        aria-haspopup={false}
                        aria-label={null}
                        aria-labelledby={null}
                        disabled={null}
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        required={false}
                        role="combobox"
                        styled-component="true"
                        value=""
                      />
                    </MockStyledComponent>
                    <MockStyledComponent
                      $ref={[Function]}
                    >
                      <div
                        styled-component="true"
                      />
                    </MockStyledComponent>
                  </AutosizeInput>
                </div>
              </MockStyledComponent>
            </span>
          </MockStyledComponent>
        </div>
      </MockStyledComponent>
    </div>
  </MockStyledComponent>
</Select>
`;

exports[`Select component renders component in search mode and true for multiple choice: Component has correct render in search mode and mutiple choice equals true 1`] = `
<Select
  aria-describedby={null}
  aria-label={null}
  aria-labelledby={null}
  autoFocus={false}
  backspaceRemoves={true}
  clearable={true}
  closeOnSelect={true}
  deleteRemoves={true}
  disabled={false}
  error={false}
  escapeClearsValue={true}
  filterOptions={[Function]}
  filterOutSelected={true}
  getOptionLabel={null}
  getValueLabel={null}
  isLoading={false}
  labelKey="label"
  maxDropdownHeight="900px"
  multi={false}
  multiple={true}
  noResultsMsg="No results found"
  onBlur={[MockFunction]}
  onBlurResetsInput={true}
  onChange={[MockFunction]}
  onClose={null}
  onCloseResetsInput={true}
  onFocus={[MockFunction]}
  onInputChange={[MockFunction]}
  onOpen={null}
  onSelectResetsInput={true}
  openOnClick={true}
  options={
    Array [
      Object {
        "id": "id1",
        "label": "label1",
      },
      Object {
        "id": "id2",
        "label": "label2",
      },
      Object {
        "id": "id3",
        "label": "bel3",
      },
    ]
  }
  overrides={Object {}}
  placeholder="Select..."
  required={false}
  searchable={true}
  size="default"
  type="search"
  value={Array []}
  valueKey="id"
>
  <MockStyledComponent
    $disabled={false}
    $error={false}
    $isFocused={false}
    $isLoading={false}
    $isOpen={false}
    $isPseudoFocused={false}
    $multi={false}
    $ref={[Function]}
    $required={false}
    $searchable={true}
    $size="default"
    $type="search"
  >
    <div
      styled-component="true"
    >
      <MockStyledComponent
        $disabled={false}
        $error={false}
        $isFocused={false}
        $isLoading={false}
        $isOpen={false}
        $isPseudoFocused={false}
        $multi={false}
        $required={false}
        $searchable={true}
        $size="default"
        $type="search"
        onClick={[Function]}
        onKeyDown={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
      >
        <div
          onClick={[Function]}
          onKeyDown={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          styled-component="true"
        >
          <Search
            $disabled={false}
            $error={false}
            $isFocused={false}
            $isLoading={false}
            $isOpen={false}
            $isPseudoFocused={false}
            $multi={false}
            $required={false}
            $searchable={true}
            $size="default"
            $type="search"
            onClick={[Function]}
            overrides={
              Object {
                "Svg": [Function],
              }
            }
            size={16}
            title="search"
          >
            <Icon
              $disabled={false}
              $error={false}
              $isFocused={false}
              $isLoading={false}
              $isOpen={false}
              $isPseudoFocused={false}
              $multi={false}
              $required={false}
              $searchable={true}
              $size="default"
              $type="search"
              onClick={[Function]}
              overrides={
                Object {
                  "Svg": [Function],
                }
              }
              size={16}
              title="search"
              viewBox="0 0 24 24"
            >
              <MockStyledComponent
                $disabled={false}
                $error={false}
                $isFocused={false}
                $isLoading={false}
                $isOpen={false}
                $isPseudoFocused={false}
                $multi={false}
                $required={false}
                $searchable={true}
                $size="default"
                $type="search"
                onClick={[Function]}
                viewBox="0 0 24 24"
              >
                <svg
                  onClick={[Function]}
                  styled-component="true"
                  viewBox="0 0 24 24"
                >
                  <title>
                    search
                  </title>
                  <g
                    transform="matrix( 1 0 0 1 1 0.899993896484375 )"
                  >
                    <path
                      clipRule="nonzero"
                      d="M 21.60009765625 19.500030517578125 L 17.2001953125 15.100006103515625 C 18.300195693969727 13.500005722045898 19 11.600030899047852 19 9.500030517578125 C 19 4.300030708312988 14.699999809265137 0 9.5 0 C 4.300000190734863 0 0 4.300030708312988 0 9.500030517578125 C 0 14.700030326843262 4.300000190734863 19.000030517578125 9.5 19.000030517578125 C 11.600000381469727 19.000030517578125 13.500097274780273 18.29998207092285 15.10009765625 17.199981689453125 L 19.5 21.600006103515625 L 21.60009765625 19.500030517578125 Z M 3 9.600006103515625 C 3 6.000006198883057 5.900000095367432 3.100006103515625 9.5 3.100006103515625 C 13.100000381469727 3.100006103515625 16 6.000006198883057 16 9.600006103515625 C 16 13.200006484985352 13.100000381469727 16.100006103515625 9.5 16.100006103515625 C 5.900000095367432 16.100006103515625 3 13.200006484985352 3 9.600006103515625 Z"
                      fill="currentColor"
                      fillRule="nonzero"
                    />
                  </g>
                </svg>
              </MockStyledComponent>
            </Icon>
          </Search>
          <MockStyledComponent
            $disabled={false}
            $error={false}
            $isFocused={false}
            $isLoading={false}
            $isOpen={false}
            $isPseudoFocused={false}
            $multi={false}
            $required={false}
            $searchable={true}
            $size="default"
            $type="search"
            role="list"
          >
            <span
              role="list"
              styled-component="true"
            >
              <MockStyledComponent
                $disabled={false}
                $error={false}
                $isFocused={false}
                $isLoading={false}
                $isOpen={false}
                $isPseudoFocused={false}
                $multi={false}
                $required={false}
                $searchable={true}
                $size="default"
                $type="search"
              >
                <div
                  styled-component="true"
                >
                  Select...
                </div>
              </MockStyledComponent>
              <MockStyledComponent
                $disabled={false}
                $error={false}
                $isFocused={false}
                $isLoading={false}
                $isOpen={false}
                $isPseudoFocused={false}
                $multi={false}
                $required={false}
                $searchable={true}
                $size="default"
                $type="search"
              >
                <div
                  styled-component="true"
                >
                  <AutosizeInput
                    $disabled={false}
                    $error={false}
                    $isFocused={false}
                    $isLoading={false}
                    $isOpen={false}
                    $isPseudoFocused={false}
                    $multi={false}
                    $required={false}
                    $searchable={true}
                    $size="default"
                    $type="search"
                    aria-autocomplete="list"
                    aria-describedby={null}
                    aria-disabled={null}
                    aria-expanded={false}
                    aria-haspopup={false}
                    aria-label={null}
                    aria-labelledby={null}
                    disabled={null}
                    inputRef={[Function]}
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    overrides={
                      Object {
                        "Input": undefined,
                      }
                    }
                    required={false}
                    role="combobox"
                    value=""
                  >
                    <MockStyledComponent
                      $disabled={false}
                      $error={false}
                      $isFocused={false}
                      $isLoading={false}
                      $isOpen={false}
                      $isPseudoFocused={false}
                      $multi={false}
                      $ref={[Function]}
                      $required={false}
                      $searchable={true}
                      $size="default"
                      $type="search"
                      $width="5px"
                      aria-autocomplete="list"
                      aria-describedby={null}
                      aria-disabled={null}
                      aria-expanded={false}
                      aria-haspopup={false}
                      aria-label={null}
                      aria-labelledby={null}
                      disabled={null}
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      required={false}
                      role="combobox"
                      value=""
                    >
                      <input
                        aria-autocomplete="list"
                        aria-describedby={null}
                        aria-disabled={null}
                        aria-expanded={false}
                        aria-haspopup={false}
                        aria-label={null}
                        aria-labelledby={null}
                        disabled={null}
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        required={false}
                        role="combobox"
                        styled-component="true"
                        value=""
                      />
                    </MockStyledComponent>
                    <MockStyledComponent
                      $ref={[Function]}
                    >
                      <div
                        styled-component="true"
                      />
                    </MockStyledComponent>
                  </AutosizeInput>
                </div>
              </MockStyledComponent>
            </span>
          </MockStyledComponent>
        </div>
      </MockStyledComponent>
    </div>
  </MockStyledComponent>
</Select>
`;

exports[`Select component renders component in select mode and false for multiple choice: Component has correct render in select mode and mutiple choice equals false 1`] = `
<Select
  aria-describedby={null}
  aria-label={null}
  aria-labelledby={null}
  autoFocus={false}
  backspaceRemoves={true}
  clearable={true}
  closeOnSelect={true}
  deleteRemoves={true}
  disabled={false}
  error={false}
  escapeClearsValue={true}
  filterOptions={[Function]}
  filterOutSelected={true}
  getOptionLabel={null}
  getValueLabel={null}
  isLoading={false}
  labelKey="label"
  maxDropdownHeight="900px"
  multi={false}
  multiple={false}
  noResultsMsg="No results found"
  onBlur={[MockFunction]}
  onBlurResetsInput={true}
  onChange={[MockFunction]}
  onClose={null}
  onCloseResetsInput={true}
  onFocus={[MockFunction]}
  onInputChange={[MockFunction]}
  onOpen={null}
  onSelectResetsInput={true}
  openOnClick={true}
  options={
    Array [
      Object {
        "id": "id1",
        "label": "label1",
      },
      Object {
        "id": "id2",
        "label": "label2",
      },
      Object {
        "id": "id3",
        "label": "bel3",
      },
    ]
  }
  overrides={Object {}}
  placeholder="Select..."
  required={false}
  searchable={true}
  size="default"
  type="select"
  value={Array []}
  valueKey="id"
>
  <MockStyledComponent
    $disabled={false}
    $error={false}
    $isFocused={false}
    $isLoading={false}
    $isOpen={false}
    $isPseudoFocused={false}
    $multi={false}
    $ref={[Function]}
    $required={false}
    $searchable={true}
    $size="default"
    $type="select"
  >
    <div
      styled-component="true"
    >
      <MockStyledComponent
        $disabled={false}
        $error={false}
        $isFocused={false}
        $isLoading={false}
        $isOpen={false}
        $isPseudoFocused={false}
        $multi={false}
        $required={false}
        $searchable={true}
        $size="default"
        $type="select"
        onClick={[Function]}
        onKeyDown={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
      >
        <div
          onClick={[Function]}
          onKeyDown={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          styled-component="true"
        >
          <MockStyledComponent
            $disabled={false}
            $error={false}
            $isFocused={false}
            $isLoading={false}
            $isOpen={false}
            $isPseudoFocused={false}
            $multi={false}
            $required={false}
            $searchable={true}
            $size="default"
            $type="select"
            role="list"
          >
            <span
              role="list"
              styled-component="true"
            >
              <MockStyledComponent
                $disabled={false}
                $error={false}
                $isFocused={false}
                $isLoading={false}
                $isOpen={false}
                $isPseudoFocused={false}
                $multi={false}
                $required={false}
                $searchable={true}
                $size="default"
                $type="select"
              >
                <div
                  styled-component="true"
                >
                  Select...
                </div>
              </MockStyledComponent>
              <MockStyledComponent
                $disabled={false}
                $error={false}
                $isFocused={false}
                $isLoading={false}
                $isOpen={false}
                $isPseudoFocused={false}
                $multi={false}
                $required={false}
                $searchable={true}
                $size="default"
                $type="select"
              >
                <div
                  styled-component="true"
                >
                  <AutosizeInput
                    $disabled={false}
                    $error={false}
                    $isFocused={false}
                    $isLoading={false}
                    $isOpen={false}
                    $isPseudoFocused={false}
                    $multi={false}
                    $required={false}
                    $searchable={true}
                    $size="default"
                    $type="select"
                    aria-autocomplete="list"
                    aria-describedby={null}
                    aria-disabled={null}
                    aria-expanded={false}
                    aria-haspopup={false}
                    aria-label={null}
                    aria-labelledby={null}
                    disabled={null}
                    inputRef={[Function]}
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    overrides={
                      Object {
                        "Input": undefined,
                      }
                    }
                    required={false}
                    role="combobox"
                    value=""
                  >
                    <MockStyledComponent
                      $disabled={false}
                      $error={false}
                      $isFocused={false}
                      $isLoading={false}
                      $isOpen={false}
                      $isPseudoFocused={false}
                      $multi={false}
                      $ref={[Function]}
                      $required={false}
                      $searchable={true}
                      $size="default"
                      $type="select"
                      $width="5px"
                      aria-autocomplete="list"
                      aria-describedby={null}
                      aria-disabled={null}
                      aria-expanded={false}
                      aria-haspopup={false}
                      aria-label={null}
                      aria-labelledby={null}
                      disabled={null}
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      required={false}
                      role="combobox"
                      value=""
                    >
                      <input
                        aria-autocomplete="list"
                        aria-describedby={null}
                        aria-disabled={null}
                        aria-expanded={false}
                        aria-haspopup={false}
                        aria-label={null}
                        aria-labelledby={null}
                        disabled={null}
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        required={false}
                        role="combobox"
                        styled-component="true"
                        value=""
                      />
                    </MockStyledComponent>
                    <MockStyledComponent
                      $ref={[Function]}
                    >
                      <div
                        styled-component="true"
                      />
                    </MockStyledComponent>
                  </AutosizeInput>
                </div>
              </MockStyledComponent>
            </span>
          </MockStyledComponent>
          <TriangleDown
            $disabled={false}
            $error={false}
            $isFocused={false}
            $isLoading={false}
            $isOpen={false}
            $isPseudoFocused={false}
            $multi={false}
            $required={false}
            $searchable={true}
            $size="default"
            $type="select"
            onClick={[Function]}
            overrides={
              Object {
                "Svg": [Function],
              }
            }
            size={16}
            title="open"
          >
            <Icon
              $disabled={false}
              $error={false}
              $isFocused={false}
              $isLoading={false}
              $isOpen={false}
              $isPseudoFocused={false}
              $multi={false}
              $required={false}
              $searchable={true}
              $size="default"
              $type="select"
              onClick={[Function]}
              overrides={
                Object {
                  "Svg": [Function],
                }
              }
              size={16}
              title="open"
              viewBox="0 0 24 24"
            >
              <MockStyledComponent
                $disabled={false}
                $error={false}
                $isFocused={false}
                $isLoading={false}
                $isOpen={false}
                $isPseudoFocused={false}
                $multi={false}
                $required={false}
                $searchable={true}
                $size="default"
                $type="select"
                onClick={[Function]}
                viewBox="0 0 24 24"
              >
                <svg
                  onClick={[Function]}
                  styled-component="true"
                  viewBox="0 0 24 24"
                >
                  <title>
                    open
                  </title>
                  <path
                    d="M12.7071 15.2929L17.1464 10.8536C17.4614 10.5386 17.2383 10 16.7929 10L7.20711 10C6.76165 10 6.53857 10.5386 6.85355 10.8536L11.2929 15.2929C11.6834 15.6834 12.3166 15.6834 12.7071 15.2929Z"
                  />
                </svg>
              </MockStyledComponent>
            </Icon>
          </TriangleDown>
        </div>
      </MockStyledComponent>
    </div>
  </MockStyledComponent>
</Select>
`;

exports[`Select component renders component in select mode and true for multiple choice: Component has correct render in select mode and mutiple choice equals true 1`] = `
<Select
  aria-describedby={null}
  aria-label={null}
  aria-labelledby={null}
  autoFocus={false}
  backspaceRemoves={true}
  clearable={true}
  closeOnSelect={true}
  deleteRemoves={true}
  disabled={false}
  error={false}
  escapeClearsValue={true}
  filterOptions={[Function]}
  filterOutSelected={true}
  getOptionLabel={null}
  getValueLabel={null}
  isLoading={false}
  labelKey="label"
  maxDropdownHeight="900px"
  multi={false}
  multiple={true}
  noResultsMsg="No results found"
  onBlur={[MockFunction]}
  onBlurResetsInput={true}
  onChange={[MockFunction]}
  onClose={null}
  onCloseResetsInput={true}
  onFocus={[MockFunction]}
  onInputChange={[MockFunction]}
  onOpen={null}
  onSelectResetsInput={true}
  openOnClick={true}
  options={
    Array [
      Object {
        "id": "id1",
        "label": "label1",
      },
      Object {
        "id": "id2",
        "label": "label2",
      },
      Object {
        "id": "id3",
        "label": "bel3",
      },
    ]
  }
  overrides={Object {}}
  placeholder="Select..."
  required={false}
  searchable={true}
  size="default"
  type="select"
  value={Array []}
  valueKey="id"
>
  <MockStyledComponent
    $disabled={false}
    $error={false}
    $isFocused={false}
    $isLoading={false}
    $isOpen={false}
    $isPseudoFocused={false}
    $multi={false}
    $ref={[Function]}
    $required={false}
    $searchable={true}
    $size="default"
    $type="select"
  >
    <div
      styled-component="true"
    >
      <MockStyledComponent
        $disabled={false}
        $error={false}
        $isFocused={false}
        $isLoading={false}
        $isOpen={false}
        $isPseudoFocused={false}
        $multi={false}
        $required={false}
        $searchable={true}
        $size="default"
        $type="select"
        onClick={[Function]}
        onKeyDown={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
      >
        <div
          onClick={[Function]}
          onKeyDown={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          styled-component="true"
        >
          <MockStyledComponent
            $disabled={false}
            $error={false}
            $isFocused={false}
            $isLoading={false}
            $isOpen={false}
            $isPseudoFocused={false}
            $multi={false}
            $required={false}
            $searchable={true}
            $size="default"
            $type="select"
            role="list"
          >
            <span
              role="list"
              styled-component="true"
            >
              <MockStyledComponent
                $disabled={false}
                $error={false}
                $isFocused={false}
                $isLoading={false}
                $isOpen={false}
                $isPseudoFocused={false}
                $multi={false}
                $required={false}
                $searchable={true}
                $size="default"
                $type="select"
              >
                <div
                  styled-component="true"
                >
                  Select...
                </div>
              </MockStyledComponent>
              <MockStyledComponent
                $disabled={false}
                $error={false}
                $isFocused={false}
                $isLoading={false}
                $isOpen={false}
                $isPseudoFocused={false}
                $multi={false}
                $required={false}
                $searchable={true}
                $size="default"
                $type="select"
              >
                <div
                  styled-component="true"
                >
                  <AutosizeInput
                    $disabled={false}
                    $error={false}
                    $isFocused={false}
                    $isLoading={false}
                    $isOpen={false}
                    $isPseudoFocused={false}
                    $multi={false}
                    $required={false}
                    $searchable={true}
                    $size="default"
                    $type="select"
                    aria-autocomplete="list"
                    aria-describedby={null}
                    aria-disabled={null}
                    aria-expanded={false}
                    aria-haspopup={false}
                    aria-label={null}
                    aria-labelledby={null}
                    disabled={null}
                    inputRef={[Function]}
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    overrides={
                      Object {
                        "Input": undefined,
                      }
                    }
                    required={false}
                    role="combobox"
                    value=""
                  >
                    <MockStyledComponent
                      $disabled={false}
                      $error={false}
                      $isFocused={false}
                      $isLoading={false}
                      $isOpen={false}
                      $isPseudoFocused={false}
                      $multi={false}
                      $ref={[Function]}
                      $required={false}
                      $searchable={true}
                      $size="default"
                      $type="select"
                      $width="5px"
                      aria-autocomplete="list"
                      aria-describedby={null}
                      aria-disabled={null}
                      aria-expanded={false}
                      aria-haspopup={false}
                      aria-label={null}
                      aria-labelledby={null}
                      disabled={null}
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      required={false}
                      role="combobox"
                      value=""
                    >
                      <input
                        aria-autocomplete="list"
                        aria-describedby={null}
                        aria-disabled={null}
                        aria-expanded={false}
                        aria-haspopup={false}
                        aria-label={null}
                        aria-labelledby={null}
                        disabled={null}
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        required={false}
                        role="combobox"
                        styled-component="true"
                        value=""
                      />
                    </MockStyledComponent>
                    <MockStyledComponent
                      $ref={[Function]}
                    >
                      <div
                        styled-component="true"
                      />
                    </MockStyledComponent>
                  </AutosizeInput>
                </div>
              </MockStyledComponent>
            </span>
          </MockStyledComponent>
          <TriangleDown
            $disabled={false}
            $error={false}
            $isFocused={false}
            $isLoading={false}
            $isOpen={false}
            $isPseudoFocused={false}
            $multi={false}
            $required={false}
            $searchable={true}
            $size="default"
            $type="select"
            onClick={[Function]}
            overrides={
              Object {
                "Svg": [Function],
              }
            }
            size={16}
            title="open"
          >
            <Icon
              $disabled={false}
              $error={false}
              $isFocused={false}
              $isLoading={false}
              $isOpen={false}
              $isPseudoFocused={false}
              $multi={false}
              $required={false}
              $searchable={true}
              $size="default"
              $type="select"
              onClick={[Function]}
              overrides={
                Object {
                  "Svg": [Function],
                }
              }
              size={16}
              title="open"
              viewBox="0 0 24 24"
            >
              <MockStyledComponent
                $disabled={false}
                $error={false}
                $isFocused={false}
                $isLoading={false}
                $isOpen={false}
                $isPseudoFocused={false}
                $multi={false}
                $required={false}
                $searchable={true}
                $size="default"
                $type="select"
                onClick={[Function]}
                viewBox="0 0 24 24"
              >
                <svg
                  onClick={[Function]}
                  styled-component="true"
                  viewBox="0 0 24 24"
                >
                  <title>
                    open
                  </title>
                  <path
                    d="M12.7071 15.2929L17.1464 10.8536C17.4614 10.5386 17.2383 10 16.7929 10L7.20711 10C6.76165 10 6.53857 10.5386 6.85355 10.8536L11.2929 15.2929C11.6834 15.6834 12.3166 15.6834 12.7071 15.2929Z"
                  />
                </svg>
              </MockStyledComponent>
            </Icon>
          </TriangleDown>
        </div>
      </MockStyledComponent>
    </div>
  </MockStyledComponent>
</Select>
`;
